# kaggle

./: .gitignore  README.md
arc/: .gitignore  README.md  environment.yml  setup.sh
arc/src/: .gitignore  config.py  data.py  deferred.py  download.md  download.sh  logger.py  loggers.py  main.py  metrics.py  model.py  models.py  nn_utils.py  pipeline.py  preprocess.py  torch_utils.py  utils.py  vis.py
arc/src/data/: __init__.py  arc.py  load.py  postprocess.py  preprocess.py
arc/src/models/: conv_programmable_nca.py  hyper_conv.py  hyper_nca.py  hyper_recurrent_cnn.py  soft_compute_nca.py  soft_kernel_hyper_conv.py  soft_layer_hyper_conv.py  soft_picking_hyper_conv.py
arc/src/models/common/: hyper_nets.py
mebe/: .gitignore  README.md  pyproject.toml
mebe/mebe/: data.py  debug-transformers.ipynb  explore-data.ipynb  main.py  model.py  submit.py  train.py  trainer.py  utils.py
mebe/tests/: test_mebe.py
src/: logger.py  main.py  nn_utils.py  utils.py  vis.py
src/data/: preprocess.py
src/models/: hyper_nca.py
