[tool.poetry]
name = "mebe"
version = "0.1.0"
description = ""
authors = ["Iliya Zhechev <iliya.zhechev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aicrowd-cli = "0.1.14"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
torch = "^1.11.0"
jupyter = "^1.0.0"
transformers = "^4.17.0"
datasets = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
